# pitch-wrench

./: .gitignore  CMakeLists.txt  README.md  build_mac.sh  index.html  script.js  styles.css
Source/: Parameters.h  PitchWrenchDSP.h  PitchWrenchModule.cpp  PitchWrenchModule.h  PlatformModule.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WebUI/: app.js  index.html  style.css
